--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,17 +1,16 @@
+.main_H {
+  position: sticky;
+  top: 0;
+  z-index: 10;
+}
 .header {
   display: flex;
   justify-content: space-between;
   padding: 10px 0px;
-  position: sticky;
   align-items: center;
-  top: 0;
-  z-index: 9999999;
 }
 .header_line {
   border-bottom: 0.1px solid lightgray;
-  /* position: sticky; */
-  /* top: 0; */
-  z-index: 9999999;
   background-color: white;
   margin-bottom: 15px;
 }
