--- a/src/components/PostModal/PostModal.css
+++ b/src/components/PostModal/PostModal.css
@@ -4,7 +4,7 @@
   right: 0;
   left: 0;
   bottom: 0;
-  z-index: 9999;
+  z-index: 99999999;
   transition: all 0.3s ease-out;
   opacity: 0;
   background-color: rgba(0, 0, 0, 0.803);
